[package]
name = "solana-clmm-raydium"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"  # core::error::Error stabilized in 1.81
license = "MIT OR Apache-2.0"
description = "Pure-Rust, no-RPC swap math for the Raydium concentrated-liquidity AMM (CLMM) on Solana. Extracted from the on-chain program with no Anchor / solana-program / runtime dependencies."
keywords = ["solana", "raydium", "clmm", "amm", "defi"]
categories = ["finance", "mathematics", "no-std"]
readme = "README.md"
repository = "https://github.com/ACNoonan/solana-clmm-raydium"
documentation = "https://docs.rs/solana-clmm-raydium"

[lib]
doctest = false

[dependencies]
uint = { version = "0.9", default-features = false }

[dev-dependencies]
proptest = "1"
serde_json = "1"
base64 = "0.22"
# Differential testing only — locks `transfer_fee` byte-exact parity with
# the canonical spl-token-2022 implementation. Pulls a chunk of the
# solana-* crate graph; never reaches the published artifact (dev-deps
# are invisible to consumers).
spl-token-2022-interface = "2"
# Constructors for `PodU16` / `PodU64`, the field types of upstream
# `TransferFee`. Already in the spl-token-2022-interface graph; named here
# explicitly so we can construct test fixtures.
spl-pod = "0.7"
