[package]
name = "solana-clmm-raydium"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"  # core::error::Error stabilized in 1.81
license = "MIT OR Apache-2.0"
description = "Pure-Rust, no-RPC swap math for the Raydium concentrated-liquidity AMM (CLMM) on Solana. Extracted from the on-chain program with no Anchor / solana-program / runtime dependencies."
keywords = ["solana", "raydium", "clmm", "amm", "defi"]
categories = ["finance", "mathematics", "no-std"]
readme = "README.md"
repository = "https://github.com/ACNoonan/solana-clmm-raydium"
documentation = "https://docs.rs/solana-clmm-raydium"
# Keep the differential-test program ELF and large mainnet fixtures out of the
# crates.io artifact. They're tracked in git so contributors can run the
# litesvm tests, but published consumers don't need them.
exclude = [
    "tests/fixtures/raydium_clmm.so",
    "tests/fixtures/swap_*.json",
    "tests/fixtures/clmm_pool_metadata.json",
]

[lib]
doctest = false

[dependencies]
uint = { version = "0.9", default-features = false }

[dev-dependencies]
proptest = "1"
serde_json = "1"
base64 = "0.22"
# Differential testing only — locks `transfer_fee` byte-exact parity with
# the canonical spl-token-2022 implementation. Pulls a chunk of the
# solana-* crate graph; never reaches the published artifact (dev-deps
# are invisible to consumers).
spl-token-2022-interface = "2"
# Constructors for `PodU16` / `PodU64`, the field types of upstream
# `TransferFee`. Already in the spl-token-2022-interface graph; named here
# explicitly so we can construct test fixtures.
spl-pod = "0.7"
# litesvm differential-test harness. Loads the on-chain Raydium CLMM
# program ELF (`tests/fixtures/raydium_clmm.so`) into an in-process VM
# and executes swap instructions for differential comparison with our
# extracted math. All version-pinned to what litesvm 0.6.1 transitively
# requires — mismatched solana-* major versions surface as confusing
# `expected solana_pubkey::Pubkey, found Pubkey` errors at compile time.
litesvm = "0.6.1"
solana-account = "2.2"
solana-pubkey = "2.2"
solana-keypair = "2.2"
solana-instruction = "=2.2.1"
solana-message = "=2.2.1"
solana-signer = "=2.2.1"
solana-transaction = "=2.2.1"
solana-clock = "=2.2.1"
